Clean up renderer package (#2695)
* Cleaned up renderer package

* Updated annotations